# zerogex-oa

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  API_Guide.md  LICENSE  Makefile  README.md  manage_service.sh  pyproject.toml  run.py  test_db.py
.github/workflows/: ci.yml
deploy/: BACKUP_RESILIENCE.md  README.md  RUNBOOK.md  deploy.sh
deploy/lib/: nginx_inject_api_key.py  nginx_remove_api_key.py
deploy/steps/: 005.preflight  010.setup  015.data_volume  020.database  030.application  040.ts_auth  050.security  100.systemd  110.api_server  120.nginx_api  125.api_auth  130.ssl  200.validation
docs/: CODE_REVIEW_2026-05-15.md  analytics_snapshot_incident_postmortem_2026-05-26.md  gamma_flip_threshold_review_2026-05-19.md  gex_flip_surface_contract.md  growth_and_productization_roadmap.md  mcp_server.md  playbook_catalog.md
docs/architecture/: analytics_engine_diagram.md  ingestion_engine_diagram.md  volume-tracking-review.md
docs/design/: api-gateway-architecture.md  backtesting-platform.md  gex_copilot_architecture.md  pattern-calibration.md  quantile-regression-range-model.md
docs/growth/: non_converter_outreach.md  posthog_funnel_setup.md
docs/runbooks/: option_chains_indexing.md  postgres_tuning.md  smart_money_calibration.md  system_monitor_schema.md
prototype/: flip_horizon.html
scripts/: get_tradestation_tokens.py
setup/database/: schema.sql
setup/systemd/: zerogex-alert.env.example  zerogex-alert.sh  zerogex-alert@.service  zerogex-cert-renew.service  zerogex-cert-renew.timer  zerogex-oa-analytics.service  zerogex-oa-api.service  zerogex-oa-backtest-archive.service  zerogex-oa-backtest-archive.timer  zerogex-oa-backtest-worker.service  zerogex-oa-daily-atm-iv-backfill.service  zerogex-oa-daily-atm-iv-backfill.timer  zerogex-oa-db-archive.service  zerogex-oa-db-archive.timer  zerogex-oa-db-maintain.service  zerogex-oa-db-maintain.timer  zerogex-oa-db-vacuum-full.service  zerogex-oa-db-vacuum-full.timer  zerogex-oa-forecast-receipt.service  zerogex-oa-forecast-receipt.timer  zerogex-oa-forecast-tweet-morning.service  zerogex-oa-forecast-tweet-morning.timer  zerogex-oa-forecast-tweet-receipt.service  zerogex-oa-forecast-tweet-receipt.timer  zerogex-oa-forecast-writer.service  zerogex-oa-forecast-writer.timer  zerogex-oa-gex-historical-stats-refresh.service  zerogex-oa-gex-historical-stats-refresh.timer  zerogex-oa-ingestion.service  zerogex-oa-logs-clear.service  zerogex-oa-logs-clear.timer  zerogex-oa-max-pain-refresh.service  zerogex-oa-max-pain-refresh.timer  zerogex-oa-normalizer-healthcheck.service  zerogex-oa-normalizer-healthcheck.timer  zerogex-oa-normalizer-refresh.service  zerogex-oa-normalizer-refresh.timer  zerogex-oa-pattern-calibration.service  zerogex-oa-pattern-calibration.timer  zerogex-oa-scorecard-tweet.service  (+4 more)
sql/: 001_create_tables.sql  schema.sql
src/: __init__.py  config.py  flow_series_sql.py  market_calendar.py  symbols.py  validation.py
src/analytics/: __init__.py  main_engine.py  position_optimizer_backtest.py  position_optimizer_engine.py  signal_engine.py  vol_expansion_backtest.py  vol_expansion_engine.py  walls.py
src/api/: __init__.py  admin_keys.py  billing.py  cache.py  database.py  errors.py  identity.py  main.py  middleware.py  models.py  ratelimit.py  redis_client.py  scopes.py  security.py  signal_metrics.py  usage.py
src/backtesting/: __init__.py  calibration_feed.py  configs.py  engine.py  meta.py  models.py  queries.py  runner.py  strategy.py  sweeps.py  worker.py
src/copilot/: __init__.py  agent.py  grounding_tools.py  handlers.py  novice_card.py  persistence.py  regime_narrative.py
src/database/: __init__.py  connection.py  password_providers.py
src/ingestion/: __init__.py  api_call_tracker.py  backfill_engine.py  backfill_manager.py  greeks_calculator.py  iv_calculator.py  main_engine.py  stream_manager.py  streaming_engine.py  tradestation_auth.py  tradestation_client.py  vix_ingester.py  volatility_index_ingester.py  vxn_ingester.py
src/jobs/: forecast_range_model.py  forecast_receipt.py  forecast_tweet.py  forecast_writer.py  scorecard_tweet.py
src/mcp/: __init__.py  server.py
src/signals/: __init__.py  consolidated_signal_engine.py  execution.py  hypothetical_trade_engine.py  independent_signals.py  main_engine.py  opportunity_quality.py  portfolio_engine.py  position_optimizer_engine.py  proprietary_signal_engine.py  regime_filter.py  scoring_engine.py  signal_scoring_engine.py  strategy_builder.py  unified_signal_engine.py
src/tools/: __init__.py  api_db_smoke.py  backtest_archive.py  daily_atm_iv_backfill.py  db_archive.py  db_query_cli.py  flow_by_contract_backfill.py  flow_series_5min_backfill.py  flow_smart_money_cli.py  gamma_flip_revalidation.py  (+8 more)
tests/: conftest.py  test_analytics_daily_atm_iv_cash_session_gate.py  test_analytics_empty_snapshot_quiet.py  test_analytics_flow_cycle.py  test_analytics_flow_premarket_shortcircuit.py  test_analytics_flow_refresh_toggle.py  test_analytics_flow_series_skip_bypass.py  test_analytics_iv_sentinel_guard.py  test_analytics_max_pain_zero_oi.py  test_analytics_off_hours.py  test_analytics_redundant_compute_skip.py  test_analytics_settlement_aware_tte.py  test_analytics_snapshot_autocommit_guard.py  test_analytics_snapshot_cold_start_lookback.py  test_analytics_snapshot_freshness.py  test_analytics_snapshot_latest_cache.py  test_analytics_snapshot_steady_state_timeout.py  test_analytics_stage_timings_on_early_return.py  test_analytics_worker_stagger.py  test_api_ai_context.py  test_api_auth_and_cors.py  test_api_billing_dev.py  test_api_database_cache.py  test_api_database_flow_refresh.py  test_api_db_auth.py  test_api_dev_portal.py  test_api_empty_list_responses.py  test_api_end_user_attribution.py  test_api_flow_series.py  test_api_health_503.py  test_api_redis_rate_limit.py  test_api_response_cache.py  test_api_scopes.py  test_api_usage_metering.py  test_backtest_archive.py  test_backtest_calibration_feed.py  test_backtest_configs.py  test_backtest_engine.py  test_backtest_insights.py  test_backtest_readonly_no_open_tx.py  (+170 more)
(+109 files in other folders)
