[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zerogex-oa"
version = "0.2.0"
description = "ZeroGEX Options Analytics Platform - Real-time gamma exposure calculations"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "ZeroGEX, LLC", email = "zerogexoptions@gmail.com"}
]
keywords = [
    "options",
    "trading",
    "gamma exposure",
    "GEX",
    "market data",
    "tradestation",
    "finance",
    "quantitative",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.0",
    "pandas>=2.0.0",
    "websocket-client>=1.6.0",
    "boto3>=1.28.0",
    "pytz>=2023.3",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "ipython>=8.0.0",
]
metrics = [
    "prometheus-client>=0.17.0",
]
greeks = [
    "scipy>=1.11.0",
    "py_vollib>=1.0.1",
]
all = [
    "zerogex-oa[dev,metrics,greeks]",
]

[project.urls]
Homepage = "https://github.com/zerogex/zerogex-oa"
Documentation = "https://github.com/zerogex/zerogex-oa/blob/main/README.md"
Repository = "https://github.com/zerogex/zerogex-oa"
Issues = "https://github.com/zerogex/zerogex-oa/issues"

[project.scripts]
zerogex-ingestion = "src.ingestion.main_engine:main"
zerogex-backfill = "src.ingestion.backfill_manager:main"
zerogex-stream = "src.ingestion.stream_manager:main"
zerogex-test-api = "src.ingestion.tradestation_client:main"
zerogex-test-greeks = "src.ingestion.greeks_calculator:main"
zerogex-test-iv = "src.ingestion.iv_calculator:main"
zerogex-analytics = "src.analytics.analytics_engine:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
src = ["*.json", "*.yaml", "*.yml"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
]
