[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zerogex-oa"
version = "0.2.0"
description = "ZeroGEX Options Analytics Platform - Real-time gamma exposure calculations"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ZeroGEX, LLC", email = "zerogexoptions@gmail.com"}
]
keywords = [
    "options",
    "trading",
    "gamma exposure",
    "GEX",
    "market data",
    "tradestation",
    "finance",
    "quantitative",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.0",
    "pandas>=2.0.0",
    "websocket-client>=1.6.0",
    "boto3>=1.28.0",
    "pytz>=2023.3",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "black==26.5.1",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "types-pytz>=2023.3",
    "types-requests>=2.31.0",
    "ipython>=8.0.0",
]
metrics = [
    "prometheus-client>=0.17.0",
]
greeks = [
    "scipy>=1.11.0",
]
api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.5.0",
    "python-json-logger>=2.0.0",
    # Optional at runtime: ratelimit.py + cache.py degrade to in-memory
    # when redis-py isn't importable, but the production deployment uses
    # the shared coordinator so we list it here.
    "redis>=5.0.0",
    # Optional at runtime: billing.py only imports stripe lazily, but the
    # B2B daily reporter needs the SDK present to ship meter events.
    "stripe>=11.0.0",
]
all = [
    "zerogex-oa[dev,metrics,greeks,api]",
]

[project.urls]
Homepage = "https://github.com/zerogex/zerogex-oa"
Documentation = "https://github.com/zerogex/zerogex-oa/blob/main/README.md"
Repository = "https://github.com/zerogex/zerogex-oa"
Issues = "https://github.com/zerogex/zerogex-oa/issues"

[project.scripts]
zerogex-ingestion = "src.ingestion.main_engine:main"
zerogex-stream = "src.ingestion.stream_manager:main"
zerogex-test-api = "src.ingestion.tradestation_client:main"
zerogex-test-greeks = "src.ingestion.greeks_calculator:main"
zerogex-test-iv = "src.ingestion.iv_calculator:main"
zerogex-analytics = "src.analytics.main_engine:main"
zerogex-position-optimizer = "src.signals.position_optimizer_engine:main"
zerogex-signals = "src.signals.main_engine:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
src = ["*.json", "*.yaml", "*.yml"]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Repo root on sys.path so cross-test helper imports (e.g. ``from
# tests.test_playbook_squeeze_breakout import _ctx``) resolve regardless
# of whether pytest was invoked as ``pytest`` or ``python -m pytest``.
pythonpath = ["."]
addopts = [
    "--verbose",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "integration: requires a live Postgres; skipped in CI. Run via `make flow-series-parity`.",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
# `ignore_missing_imports` only suppresses `import-not-found` (module
# can't be located).  `import-untyped` (module exists but has no PEP-561
# stubs available) is a separate error code; suppress it project-wide so
# `make ci` passes regardless of whether contributors have installed
# every optional types-* package locally.  The dev extra in this file
# pins `types-pytz` and `types-requests` for those who do install dev
# tooling fully.
disable_error_code = ["import-untyped"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
]
